Fixed small issue where hovering over a button in Profiel would make the Friend Requests and Porfile Pictrue components shift.
Changed "vahvuusluku" to "arvo" as a hack to avoid the mentioned overlap.

Applied missing "games played in total" translation

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,7 @@
 @theme
 {
 	--color-transcendence-red: #70193D;
+	--color-transcendence-red-light: #E43636;
 	--color-transcendence-black: #000000;
 	--color-transcendence-beige: #E2DDB4;
 	--color-transcendence-white: #ffffff;
